Update merge-gate from java 11 to java 17